# Web_Homework_14

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 50d21283e8d2_init.py  5f35d99924f8_init.py  8d64b7ac107b_init.py  a2b2b23a4286_init.py  bcca2a6606b9_init.py
src/: main.py  schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
src/tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
