[tool.poetry]
name = "restapi"
version = "0.1.0"
description = ""
authors = ["Balorum <Remeshevskyi.Nikita03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
libgravatar = "^1.0.4"
fastapi-mail = "^1.3.0"
python-dotenv = "^1.0.0"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
